--- a/views/index.ejs
+++ b/views/index.ejs
@@ -5,7 +5,6 @@
     <link rel="stylesheet" href="https://pro.fontawesome.com/releases/v5.10.0/css/all.css" integrity="sha384-AYmEC3Yw5cVb3ZcuHtOA93w35dYTsvhLPVnYs9eStHfGJvOvKxVfELGroGkvsg+p" crossorigin="anonymous"/>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Raleway">
     <link rel="stylesheet" href="./stylesheets/basic.css">
@@ -42,13 +41,16 @@
         <hr class="w3-border-grey" style="margin:auto;width:50%">
         <p class="homefont w3-large w3-center"><b>Welcome to MelleWS,<br/></b>a fast and reliable web platform.</p>
       </div>
+      <!--
       <div class="w3-bar w3-teal w3-display-bottommiddle">
         <p class="w3-bar-item" style="text-align: center">MelleWS is currently in beta (0.8b6). Therefore, you might experience issues. If so, please let us know by opening an issue on the <a href="https://www.github.com/MelleNooijen/MelleWS/">MelleWS repository.</a></p>
       </div>
+      -->
       <div class="homefont w3-display-bottomleft w3-padding-large w3-text-black">
         <a id="myBtn" class="baritem" href="#">©</a> Melle Nooijen
       </div>
-      <a href="https://www.github.com/MelleNooijen/MelleWS" class="w3-display-bottomright w3-margin"><i class="fab fa-github fa-2x" style="color:rgba(216, 216, 216, 0.5); backdrop-filter: blur(10px);"></i></a>
+      <p class="w3-display-topright w3-margin" style="color:rgba(100, 100, 100, 0.5); mix-blend-mode: difference;"><%= version %></p>
+      <a href="https://www.github.com/MelleNooijen/MelleWS" class="w3-display-bottomright w3-margin"><i class="fab fa-github fa-2x" style="color:rgba(216, 216, 216, 0.5);"></i></a>
     </div>
     <script>
 var modal = document.getElementById("myModal");
