main page and drive redone

--- a/public/stylesheets/basic.css
+++ b/public/stylesheets/basic.css
@@ -10,6 +10,7 @@ body {
   min-height: 100%;
   background-position: center;
   background-size: cover;
+  margin: 0;
 }
 .shadow {
   box-shadow: 4px 4px 11px -2px rgba(0,0,0,0.75);
