--- a/public/stylesheets/bar.css
+++ b/public/stylesheets/bar.css
@@ -2,9 +2,10 @@
     from {margin:10px 0 0 0;}
     to {margin:-30px 0 0 0;}
 }
-
 .menu-bar {
     position: fixed;
+    left: 50%;
+    transform: translate(-50%, 0);
     border-radius: 50px;
     z-index: 1;
     height: fit-content;
@@ -16,7 +17,6 @@
     padding: 0 10px;
     transition: 0.5s;
 }
-
 .dmb {
     margin: -30px 0 0 0;
     animation: showanim 1s;
