--- a/views/index.ejs
+++ b/views/index.ejs
@@ -2,14 +2,26 @@
 <html>
   <head>
     <title>MelleWS</title>
+
     <link rel="stylesheet" href="https://pro.fontawesome.com/releases/v5.10.0/css/all.css" integrity="sha384-AYmEC3Yw5cVb3ZcuHtOA93w35dYTsvhLPVnYs9eStHfGJvOvKxVfELGroGkvsg+p" crossorigin="anonymous"/>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta charset="UTF-8">
+    <!--
     <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
+    -->
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Raleway">
     <link rel="stylesheet" href="./stylesheets/basic.css">
     <link rel="stylesheet" href="./stylesheets/modal.css">
+    <link rel="stylesheet" href="./stylesheets/main.css">
+    
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+    <% if(!(typeof(req.session.user) === "undefined" || req.session.user.rgb == '')){ %>
+      <% if(typeof(barCol) === "undefined"){ var barCol = req.session.user.rgb + ".black" || "180,180,180.black" %>
+      <% } else if(barCol == "180,180,180.white"){ var barCol = req.session.user.rgb + ".white" || "180,180,180.white"} %>
+    <% } else { %>
+      <% if(typeof(barCol) === "undefined"){ var barCol = "180,180,180.black" } %>
+    <% } %>
+
     <style>
       .homefont {font-family: "Raleway", sans-serif}
       body, html {height: 100%}
@@ -27,46 +39,56 @@
       console.log('url(../images/' + images[Math.floor(Math.random() * images.length)] + ')');
     </script>
     <%- include('bar', {req: req, barCol: "180,180,180.white"}); %>
-    <div class="bgimg w3-display-container w3-animate-opacity w3-text-white">
-      <div id="myModal" class="modal">
-        <div class="modal-content w3-display-middle">
-          <span class="close">&times;</span>
-          <span class="tongue">😜</span>
-          <br/>
-          <p style="font-family: 'Courier New', Courier, monospace; font-weight:200; font-size:large;">This Nonexclusive Service License Agreement ("Agreement") is between you (As in your soul entity, shall this Agreement not expire under any afterlife circumstance, if any), your heirs, agents, successors and assigns ("Licensee") and MelleMWS<br/>By registering at the MelleMWS services you, your heirs, agents, successors and assigns will be the exclusive transferable property of MelleMWS, aside from any local law or human right regulation. You agree to obey any orders at the request of MelleMWS, as notified via your account's e-mail with the maximum possible priority.<br/>The faillure to comply with such terms will be hardly punished by MelleMWS, that may revoke your rights or terminate your life (private property of MelleMWS) without prior notice.<br/>You agree not to legally make MelleMWS guitly under any circumstance, and prove MelleMWS not liable for any law violation MelleMWS may be held liable of.<br/>MelleMWS reserves the right to update, modify or remove these terms without prior notice.</p>
-        </div>
+
+    <div id="myModal" class="modal">
+      <div class="modal_wrapper">
+        <span class="close">&times;</span>
+        <span class="tongue">😜</span>
+        <br/>
+        <p style="font-family: 'Courier New', Courier, monospace; font-weight:200; font-size:large;">This Nonexclusive Service License Agreement ("Agreement") is between you (As in your soul entity, shall this Agreement not expire under any afterlife circumstance, if any), your heirs, agents, successors and assigns ("Licensee") and MelleMWS<br/>By registering at the MelleMWS services you, your heirs, agents, successors and assigns will be the exclusive transferable property of MelleMWS, aside from any local law or human right regulation. You agree to obey any orders at the request of MelleMWS, as notified via your account's e-mail with the maximum possible priority.<br/>The faillure to comply with such terms will be hardly punished by MelleMWS, that may revoke your rights or terminate your life (private property of MelleMWS) without prior notice.<br/>You agree not to legally make MelleMWS guitly under any circumstance, and prove MelleMWS not liable for any law violation MelleMWS may be held liable of.<br/>MelleMWS reserves the right to update, modify or remove these terms without prior notice.</p>
       </div>
-      <div class="w3-display-middle">
-        <h1 class="homefont w3-jumbo w3-animate-top"><b>MelleWS</b></h1>
-        <hr class="w3-border-grey" style="margin:auto;width:50%">
-        <p class="homefont w3-large w3-center"><b>Welcome to MelleWS,<br/></b>a fast and reliable web platform.</p>
-      </div>
-      <!--
-      <div class="w3-bar w3-teal w3-display-bottommiddle">
-        <p class="w3-bar-item" style="text-align: center">MelleWS is currently in beta (0.8b6). Therefore, you might experience issues. If so, please let us know by opening an issue on the <a href="https://www.github.com/MelleNooijen/MelleWS/">MelleWS repository.</a></p>
-      </div>
-      -->
-      <div class="homefont w3-display-bottomleft w3-padding-large w3-text-black">
+    </div>
+
+    <div class="site_header_wrapper">
+      <h1 class="header_title" style="font-size: 75px; font-weight: 500;"><b>MelleWS</b></h1>
+      <p class="webapp_version" style="color:rgba(168, 12, 245, 0.987); mix-blend-mode: difference; font-weight: 550;"><%= version %></p>
+      
+      <hr class="seperator" style="background: linear-gradient(120deg, rgba(<%= barCol.split(".")[0]%>,.9) 0%, rgba(<%= barCol.split(".")[0]%>,.1) 75%); margin:auto;width:75%;">
+      <p class="header_info" style="font-size: 25px;"><b>Welcome to MelleWS,<br/></b>a fast and reliable web platform.</p>
+    </div>
+
+    <!--
+    <div class="w3-bar w3-teal w3-display-bottommiddle">
+      <p class="w3-bar-item" style="text-align: center">MelleWS is currently in beta (0.8b6). Therefore, you might experience issues. If so, please let us know by opening an issue on the <a href="https://www.github.com/MelleNooijen/MelleWS/">MelleWS repository.</a></p>
+    </div>
+    -->
+
+    <footer class="main_footer">
+      <div class="cpyright_wrapper">
         <a id="myBtn" class="baritem" href="#">©</a> Melle Nooijen
       </div>
-      <p class="w3-display-topright w3-margin" style="color:rgba(100, 100, 100, 0.5); mix-blend-mode: difference;"><%= version %></p>
-      <a href="https://www.github.com/MelleNooijen/MelleWS" class="w3-display-bottomright w3-margin"><i class="fab fa-github fa-2x" style="color:rgba(216, 216, 216, 0.5);"></i></a>
-    </div>
+
+      <a href="https://www.github.com/MelleNooijen/MelleWS" class="source_link_wrapper"><i class="fab fa-github fa-2x" id="github_logo" style="color:rgb(0, 0, 0);"></i></a>
+      
+    </footer>
     <script>
-var modal = document.getElementById("myModal");
-var btn = document.getElementById("myBtn");
-var span = document.getElementsByClassName("close")[0];
-btn.onclick = function() {
-  modal.style.display = "block";
-}
-span.onclick = function() {
-  modal.style.display = "none";
-}
-window.onclick = function(event) {
-  if (event.target == modal) {
-    modal.style.display = "none";
-  }
-}
+      var modal = document.getElementById("myModal");
+      var btn = document.getElementById("myBtn");
+      var span = document.getElementsByClassName("close")[0];
+      btn.onclick = function() {
+        modal.style.display = "block";
+        modal.style.opacity = "1";
+      }
+      span.onclick = function() {
+        modal.style.display = "none";
+        modal.style.opacity = "0";
+      }
+      window.onclick = function(event) {
+        if (event.target == modal) {
+          modal.style.display = "none";
+          modal.style.opacity = "0";
+        }
+      }
     </script>
   </body>
 </html>
