--- a/views/unco.ejs
+++ b/views/unco.ejs
@@ -3,24 +3,24 @@
   <head>
     <title>MelleWS</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
+    <link rel="stylesheet" href="/stylesheets/unco.css"/>
   </head>
   <body>
     <%- include('bar', {req: req, barCol: "255,235,59.black"}); %>
     <br/>
     <br/>
     <br/>
-    <div class="w3-container w3-display-center">
-        <div class="w3-display-left w3-margin-left w3-padding">
+    <div class="main_wrapper">
+        <div class="text_wrapper">
             <h1>Under construction!</h1>
             <p>The page you are trying to visit is still under construction.</p>
         </div>
-        <div class="w3-display-right w3-margin-right w3-padding">
+        <div class="img_wrapper">
             <img 
             src="./images/unco.svg"
             alt="Under construction"
             height="500"
-            class=""/>
+            class="consr_img"/>
         </div>
       </div>      
   </body>
