--- a/views/login.ejs
+++ b/views/login.ejs
@@ -3,26 +3,28 @@
   <head>
     <title>MelleWS</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
+    <link rel="stylesheet" href="./stylesheets/login.css">
+    <link rel='stylesheet' href='/stylesheets/style.css' />
+    
   </head>
   <body>
     <%- include('bar', {req: req}); %>
     <br/>
     <br/>
     <br/>
-    <div class="w3-container w3-center">
-        <h1>Login</h1>
-        <div class="w3-bar">
+    <div class="login_wrapper">
+        <h1 class="login_header">Login</h1>
+        <div class="login_card">
             <% if (req.isAuthenticated()) { %>
                 <p>You are logged in as <%= req.session.user.username %>. Click to <a href="/forget">log out</a>.</p>
             <% } else { %>
               <% if(message){ %>
                 <p style="color:red"><%= message %></p>
               <% } %>
-              <form class="w3-container" method="post" action="/login">
-                <input class="w3-input" type="text" name="username" id="username" placeholder="Username"/>
-                <input class="w3-input" type="password" name="password" id="password" placeholder="Password"/>
-                <input class="w3-button w3-teal w3-margin-top" type="submit" value="Log in"/>
+              <form class="login_form" method="post" action="/login">
+                <input class="input text_input" type="text" name="username" id="username" placeholder="Username"/>
+                <input class="input text_input" type="password" name="password" id="password" placeholder="Password"/>
+                <input class="input main_btn" type="submit" value="Log in"/>
               </form>
             <% } %>
         </div>
