--- a/public/stylesheets/login.css
+++ b/public/stylesheets/login.css
@@ -33,8 +33,8 @@ body{
     background: var(--Back);
     padding: 2rem;
     border-radius: 90px;
-    box-shadow: 24px 24px 27px #a4a4a4,
-            -24px -24px 27px #ffffff;
+    box-shadow:  20px 20px 60px #bebebe,
+             -20px -20px 60px #ffffff;
 }
 
 .login_form{
@@ -45,10 +45,13 @@ body{
     margin: 1em;
 }
 .text_input{
+    -webkit-appearance: none;
     border: transparent;
+    border-radius: 90px;
     background-color: var(--Back);
-
-
+    box-shadow: inset 6px 6px 18px #bcbcbc,
+    inset -6px -6px 18px #ffffff;
+    padding: 20px;
 }
 .text_input:focus{
     border: transparent;
