--- a/public/stylesheets/main.css
+++ b/public/stylesheets/main.css
@@ -2,7 +2,8 @@
 }
 
 body{
-    font-family: Georgia, 'Times New Roman', Times, serif;
+    font-family: 'Segoe UI', sans-serif;
+    /* font-family: Georgia, 'Times New Roman', Times, serif; */
 }
 .main_wrapper{
 
@@ -30,6 +31,7 @@ body{
 }
 .header_title{
     margin: 0;
+    font-family:Raleway, 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif
 }
 .site_header_wrapper{
     position: absolute;
@@ -38,12 +40,10 @@ body{
     text-align: center;
     margin-top: 15rem;
     color: white;
-    font-family: sans-serif;
 }
 .seperator{
     border: transparent;
     border-radius: 15px;
-    
     height: 4px;
 }
 .main_footer{
