--- a/views/bar.ejs
+++ b/views/bar.ejs
@@ -5,6 +5,11 @@
 <% } else { %>
   <% if(typeof(barCol) === "undefined"){ var barCol = "180,180,180.black" } %>
 <% } %>
+<style>
+  :root {
+    --Accent: rgb(<%= barCol.split(".")[0]%>);
+  }
+</style>
 <ul class="menu-bar" id="mainBarDiv" style="background-color: rgba(<%= barCol.split(".")[0]%>,.4); color: <%= barCol.split(".")[1] %>;">
   <a href="/"><li class="li-icon"><img 
     src="/images/logo-<%= barCol.split(".")[1] %>-v2.svg"
