Globally declared CSS variables

--- a/views/bar.ejs
+++ b/views/bar.ejs
@@ -8,6 +8,9 @@
 <style>
   :root {
     --Accent: rgb(<%= barCol.split(".")[0]%>);
+    --Prim: rgb(255, 0, 183);
+    --Back: rgb(230, 230, 230);
+    --btn: rgb(68, 68, 68);
   }
 </style>
 <ul class="menu-bar" id="mainBarDiv" style="background-color: rgba(<%= barCol.split(".")[0]%>,.4); color: <%= barCol.split(".")[1] %>;">
