--- a/views/error.ejs
+++ b/views/error.ejs
@@ -1,7 +1,10 @@
 <html>
+  <head>
     <title>MelleWS (error)</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css"> 
+    <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
+  </head> 
+  <body>
     <%- include('bar', {req: req, barCol: "244,67,54.black"}); %>
     <div class="w3-container w3-display-middle">
       <h1>Error! | <%= error.status || "Script Error" %></h1>
@@ -9,4 +12,5 @@
       <p>Please check if you spelled the request correctly, if the resource is still available, and if you are authorised to see the resource.<br />There is more detailed error info below.</p>
       <pre><%= error.message %></pre>
     </div>
+  </body>
 </html>
