--- a/views/index.ejs
+++ b/views/index.ejs
@@ -13,6 +13,14 @@
     <link rel="stylesheet" href="./stylesheets/basic.css">
     <link rel="stylesheet" href="./stylesheets/modal.css">
     <link rel="stylesheet" href="./stylesheets/main.css">
+    <meta name="apple-mobile-web-app-capable" content="yes">
+    <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
+    <link rel="manifest" href="/site.webmanifest">
+    <link rel="mask-icon" href="/safari-pinned-tab.svg" color="#009688">
+    <meta name="msapplication-TileColor" content="#00aba9">
+    <meta name="theme-color" content="#009688">
     
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
     <% if(!(typeof(req.session.user) === "undefined" || req.session.user.rgb == '')){ %>
