--- a/views/drive.ejs
+++ b/views/drive.ejs
@@ -4,6 +4,7 @@
     <title>MelleWS</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="/stylesheets/drive.css"/>
+    <link rel='stylesheet' href='/stylesheets/style.css' />
   </head>
   <body>
     <%- include('bar', {req: req}); %>
@@ -25,7 +26,7 @@
               <option value="dm_personal">User Directory</option>
             </select>
           </div>
-          <input class="submit_input" type="submit">
+          <input class="submit_input main_btn" type="submit">
         </form>
     </div>
   </body>
