--- a/views/createuser.ejs
+++ b/views/createuser.ejs
@@ -8,6 +8,7 @@
   </head>
   <body>
     <%- include('bar', {req: req}); %>
+    <% var isInset = (true ? "inset_input" : "input") %> 
     <br/>
     <br/>
     <br/>
@@ -22,10 +23,10 @@
         <% } %>
         <div class="form_wrapper">
           <form class="form" action="/register" method="POST">
-            <input class="input" type="text" name="username" id="username" placeholder="Username" required>
-            <input class="input" type="email" name="email" id="email" placeholder="E-mail" required>
-            <input class="input" type="password" id="password" name="password" placeholder="Password" required />
-            <input class="input" type="password" id="rePassword" name="rePassword" placeholder="Re-enter password" required />
+            <input class="<%= isInset %>" type="text" name="username" id="username" placeholder="Username" required>
+            <input class="<%= isInset %>" type="email" name="email" id="email" placeholder="E-mail" required>
+            <input class="<%= isInset %>" type="password" id="password" name="password" placeholder="Password" required />
+            <input class="<%= isInset %>" type="password" id="rePassword" name="rePassword" placeholder="Re-enter password" required />
             <input class="main_btn" type="submit" name="sbmt">
           </form>
         </div>
