--- a/public/stylesheets/drive.css
+++ b/public/stylesheets/drive.css
@@ -24,9 +24,8 @@ body{
     background: var(--Back);
     padding: 2rem;
     border-radius: 90px;
-    box-shadow: 
-    12px 12px 16px 0 rgba(0, 0, 0, 0.25),
-    -6px -6px 10px 0 rgb(255, 255, 255);
+    box-shadow:  20px 20px 60px #bebebe,
+                -20px -20px 60px #ffffff;
 }
 
 .form_container{
