--- a/public/stylesheets/main.css
+++ b/public/stylesheets/main.css
@@ -10,7 +10,12 @@ body{
     top: 50%;
     left: 50%;
     transform: translate(-50%, -50%);
-    background: rgba(58, 58, 58, 0.453);
+    background: rgba(184, 184, 184, 0.5);
+    -webkit-backdrop-filter: blur(5px);
+    backdrop-filter: blur(5px);
+    -webkit-box-shadow: 10px 10px 26px -7px rgba(0,0,0,0.41);
+    -moz-box-shadow: 10px 10px 26px -7px rgba(0,0,0,0.41);
+    box-shadow: 10px 10px 26px -7px rgba(0,0,0,0.41);
     padding: 1rem;
 }
 .tongue{
